# yggdre

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  api.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
