[package]
name = "yggdre"
version = "0.1.0"
description = "Local Yggdrasil Network control panel"
authors = ["samom"]
edition = "2021"

[lib]
name = "yggdre_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
url = "2"
